<resources>
    <string name="app_name">ACCO HORTA SUD</string>
    <string name="inici">INICI</string>
    <string name="serveis">SERVEIS ACCO</string>
    <string name="adl">ADL MUNICIPIS</string>
    <string name="events">AGENDA EVENTS</string>
    <string name="empleo">Averigua la teua empleabilitat</string>
    <string name="personal">COMUNICACIONS</string>
    <string name="orientacio">ORIENTACIÓ LABORAL</string>
    <string name="title_activity_obser">Eines Informàtiques i teletreball</string>
    <string name="title_activity_orient">Ocupació, orientació i recursos</string>
    <string name="title_activity_consol">Informació autonoms i empresa</string>
    <string name="title_activity_turisme">Igualtat</string>
    <string name="title_activity_aedl">Aedl de la comarca</string>
    <string name="title_activity_events">Events Comarcals</string>
    <string name="title_activity_signin">Autenticació</string>
    <string name="google_status_fmt">status</string>
    <string name="firebase_status_fmt">detail</string>
    <string name="signed_out">usuari no vàlid</string>
    <string name="my_signin">Sign Out</string>
    <string name="title_activity_personal">COMUNICACIONS</string>
    <string name="title_activity_my_whats_app">El meu Xat</string>
    <string name="news_channel">new_channel</string>
    <string name="title_activity_v_t">VIDEOTUTORIALES</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="videotutoriales">VIDEOTUTORIALES</string>
</resources>
