<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.acco.MainActivity">
    <item
        android:id="@+id/signOut"
        android:orderInCategory="100"
        android:title="@string/my_signin"
        app:showAsAction="never" />

    <item
        android:id="@+id/inici"
        android:orderInCategory="100"
        android:title="INICI"
        app:showAsAction="never" />
    <item
        android:id="@+id/serveis"
        android:orderInCategory="100"
        android:title="@string/serveis"
        app:showAsAction="never" >
            <menu>
                <item
                    android:id="@+id/observatori"
                    android:title="Eines informàtiques i teletreball"
                    />
                <item
                    android:id="@+id/orietlaboral"
                    android:title="Ocupació, orientació i recursos"
                    />
                <item
                    android:id="@+id/consol"
                    android:title="Informació autónoms i empreses"
                    />
                <item
                    android:id="@+id/turisme"
                    android:title="Assesorament en plans d'igualtat"
                    />

            </menu>
    </item>

    <item
        android:id="@+id/adl"
        android:orderInCategory="100"
        android:title="@string/adl"
        app:showAsAction="never" />
    <item
        android:id="@+id/events"
        android:orderInCategory="100"
        android:title="@string/events"
        app:showAsAction="never" />
    <item
        android:id="@+id/personal"
        android:orderInCategory="100"
        android:title="@string/personal"
        app:showAsAction="never" />
    <item
        android:id="@+id/orientacio"
        android:orderInCategory="100"
        android:title="@string/orientacio"
        app:showAsAction="never" />
    <item
        android:id="@+id/videotutorials"
        android:orderInCategory="100"
        android:title="@string/videotutoriales"
        app:showAsAction="never" />
</menu>
